crates/obj-rs/tests/derive_compile_fail/bad_version_string.stderr
error: expected integer literal
 --> tests/derive_compile_fail/bad_version_string.rs:4:17
  |
4 | #[obj(version = "two")]
  |                 ^^^^^
